@@ -92,6 +92,10 @@ maint jit dump
      Added new MI command '-thread-simd-width' which returns the SIMD width of a
      stopped thread.
 
+  ** '-thread-execution-mask'
+
+     Added new MI command for getting thread execution mask.
+
 * New remote packets
 
 qXfer:libraries:read's response
